# vibe-learn

./: dataset.txt  next.config.ts  package-lock.json  package.json  tsconfig.json
app/: layout.tsx  page.tsx
app/api/datasets/: route.ts
app/api/datasets/[id]/: route.ts
components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  textarea.tsx
lib/: dataset-constraints.ts  mongodb.ts
public/: words.txt
types/: zenfs.d.ts
wasm/: Cargo.toml
wasm/similarity/: Cargo.toml
wasm/similarity/src/: lib.rs
